tests/baselines/reference/contextualClassMethodParameter7.errors.txt
tests/cases/conformance/classes/contextualClassMethodParameter/contextualClassMethodParameter7.ts(6,12): error TS7022: 'y' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== tests/cases/conformance/classes/contextualClassMethodParameter/contextualClassMethodParameter7.ts (1 errors) ====
    class Base {
        method(x: "a" | "b") { }
    }
    
    class Derived extends Base {
        method(y = "c") { }
               ~~~~~~~
!!! error TS7022: 'y' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    }
    